[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "artefacts_utils_rosbag_gpl"
authors = [
  { name="TN", email="tomo@artefacts.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-python",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["artefacts_utils_rosbag_gpl"]
include-package-data = false

[tool.setuptools_scm]
version_file = "artefacts_utils_rosbag_gpl/version.py"

[project.optional-dependencies]
dev = [
    "build",
    "pyre-check",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-mock",
    "ruff",
    "setuptools-scm",
    "twine",
]

[project.urls]
"Homepage" = "https://github.com/art-e-fact/artefacts_utils_rosbag_gpl"
"Bug Tracker" = "https://github.com/art-e-fact/artefacts_utils_rosbag_gpl/issues"
