[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "artefacts_toolkit_rosbag_gpl"
authors = [
  { name="FD", email="fabian@artefacts.com" },
  { name="AGC", email="alejandro@artefacts.com" },
  { name="TN", email="tomo@artefacts.com" },
  { name="EP", email="eric@artefacts.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-python",
    "numpy >= 1.26.0, < 2",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["artefacts_toolkit_rosbag_gpl"]
include-package-data = false

[tool.setuptools_scm]
version_file = "artefacts_toolkit_rosbag_gpl/version.py"

[project.optional-dependencies]
dev = [
    "build",
    "pyre-check",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-mock",
    "ruff",
    "setuptools-scm",
    "twine",
]

[project.urls]
"Homepage" = "https://github.com/art-e-fact/artefacts-toolkit-rosbag_gpl"
"Bug Tracker" = "https://github.com/art-e-fact/artefacts-toolkit-rosbag_gpl/issues"
